--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img class="logo" src="logo.svg" alt="Netflix Logo">
         </div>
         <div class="navbar-nav">
-            <a href="#" class="nav-link">Home</a>
+            <a href="/" class="nav-link">Home</a>
             <a href="#" class="nav-link">TV Shows</a>
             <a href="#" class="nav-link">Movies</a>
             <a href="#" class="nav-link">News and Popular</a>
