--- a/index.html
+++ b/index.html
@@ -42,7 +42,34 @@
              <div class="hero-button">
                 <button class="btn btn-play"><i class="fas fa-play"></i> Play</button></button>
                 <button class="btn btn-more-info"><i class="fas fa-info-circle"></i> More Info</button>
-             </div>
+              <button class="mute" onclick="mute()"><i class="fas fa-volume-mute"></i></button>
+              </div>
+             <!-- <div class="movie-moments"> -->
+                       <!-- <div class="content-row"> -->
+                        <!-- fas fa-volume-mute -->
+         <!-- <i class="fas fa-volume"></i> -->
+         <!-- <div class="content-card"> -->
+           <!-- <img src="movie2.jpg" alt="Movie card" /> -->
+           <!-- <div class="netflix-badge">N</div> -->
+           <!-- <div class="card-overlay"> -->
+             <!-- <div class="overlay-top"> -->
+               <!-- <div class="netflix-badge">N</div> -->
+             <!-- </div> -->
+             <!-- <div class="overlay-bottom"> -->
+               <!-- <div class="overlay-control"> -->
+                 <!-- <div class="control-btn play-btn"></div> -->
+                 <!-- <div class="control-btn check-btn"></div> -->
+                 <!-- <div class="control-btn thumbs-btn"></div> -->
+                 <!-- <div class="control-btn more-btn"></div> -->
+               <!-- </div> -->
+               <!-- <div class="overlay-info"> -->
+                 <!-- <div class="info-badge">Episode 1</div> -->
+               <!-- </div> -->
+             <!-- </div> -->
+           <!-- </div> -->
+         <!-- </div> -->
+         <!-- </div> -->
+             <!-- </div> -->
 
         </div>
     <!-- </div> -->
@@ -335,7 +362,40 @@
        </div>
      </section>
    </div>
-
+<footer class="foot">
+    <div class="logo-panel">
+      <i class="fa-brands fa-facebook" id="sp"></i>
+      <i class="fa-brands fa-instagram" id="sp"></i>
+      <i class="fa-brands fa-x" id="sp"></i>
+      <i class="fa-brands fa-youtube" id="sp"></i>
+    </div>
+    <div class="collection">
+    <div class="options">
+      <a href="#" class="foot-link">Audio Description</a>
+      <a href="#" class="foot-link">Investor Relations</a>
+      <a href="#" class="foot-link">Legal Notices</a>
+      </div>
+      <div class="options">
+      <a href="#" class="foot-link">Gift Cards</a>
+      <a href="#" class="foot-link">Terms of Use</a>
+      <a href="#" class="foot-link">Corporate Information</a>
+      </div>
+      <div class="options">
+      <a href="#" class="foot-link">Help Centre</a>
+      <a href="#" class="foot-link">Jobs</a>
+      <a href="#" class="foot-link">Cookie Preferences</a>
+      </div>
+      <div class="options">
+      <a href="#" class="foot-link">Media Center</a>
+      <a href="#" class="foot-link">Privacy</a>
+      <a href="#" class="foot-link">Contact Us</a>
+      
+    </div>
+    </div>
+    <div class="copyright">All rights reserved Netflix India
+       <i id="copy" class="fa fa-copyright" aria-hidden="true"></i> 2025
+    </div>
+</footer>
 
     <script src="script.js"></script>
   </body>
